'Proposal of technical architecture' next steps.

--- a/literature.bib
+++ b/literature.bib
@@ -128,7 +128,7 @@
 	title = {Using semantics to enhance the blogging experience},
 	booktitle = {The {Semantic} {Web}: {Research} and {Applications}, 3rd {European} {Semantic} {Web} {Conference}, {ESWC} 2006, {Budva}},
 	publisher = {Springer},
-	author = {Bojārs, Uldis and Breslin, John G. and Möller, Knud},
+	author = {Bojärs, Uldis and Breslin, John G. and Möller, Knud},
 	year = {2006},
 	pages = {679--696}
 }
@@ -139,12 +139,27 @@
 	year = {2012}
 }
 
+@misc{hyland_linked_????,
+	title = {Linked {Data} {Glossary}},
+	url = {https://www.w3.org/TR/ld-glossary/#rest-api},
+	urldate = {2016-03-30},
+	author = {Hyland, Bernadette and Atemezing, Ghislain and Pendleton, Michael and Srivastava, Biplav},
+	file = {Linked Data Glossary:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/CXVQNG4T/ld-glossary.html:text/html}
+}
+
+@misc{_linking_????,
+	title = {The {Linking} {Open} {Data} cloud diagram},
+	url = {http://lod-cloud.net/},
+	urldate = {2016-03-30},
+	file = {The Linking Open Data cloud diagram:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/SQ3XBJZR/lod-cloud.net.html:text/html}
+}
+
 @incollection{krotzsch_semantic_2006,
 	address = {Berlin, Heidelberg},
-	title = {The {Semantic} {Web} - {ISWC} 2006: 5th {International} {Semantic} {Web} {Conference}, {ISWC} 2006, {Athens}, {GA}, {USA}, {November} 5-9, 2006. {Proceedings}},
+	title = {Semantic {MediaWiki}},
 	isbn = {978-3-540-49055-5},
 	url = {http://dx.doi.org/10.1007/11926078_68},
-	booktitle = {Semantic {MediaWiki}},
+	booktitle = {The {Semantic} {Web} - {ISWC} 2006: 5th {International} {Semantic} {Web} {Conference}, {ISWC} 2006, {Athens}, {GA}, {USA}, {November} 5-9, 2006. {Proceedings}},
 	publisher = {Springer Berlin Heidelberg},
 	author = {Krötzsch, Markus and Vrandečić, Denny and Völkel, Max},
 	editor = {Cruz, Isabel and Decker, Stefan and Allemang, Dean and Preist, Chris and Schwabe, Daniel and Mika, Peter and Uschold, Mike and Aroyo, Lora M.},
@@ -152,10 +167,39 @@
 	pages = {935--942}
 }
 
-@misc{hyland_linked_????,
-	title = {Linked {Data} {Glossary}},
-	url = {https://www.w3.org/TR/ld-glossary/#rest-api},
-	urldate = {2016-03-30},
-	author = {Hyland, Bernadette and Atemezing, Ghislain and Pendleton, Michael and Srivastava, Biplav},
-	file = {Linked Data Glossary:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/CXVQNG4T/ld-glossary.html:text/html}
+@incollection{bizer_deployment_2013,
+	address = {Berlin, Heidelberg},
+	title = {Deployment of {RDFa}, {Microdata}, and {Microformats} on the {Web} – {A} {Quantitative} {Analysis}},
+	isbn = {978-3-642-41338-4},
+	url = {http://dx.doi.org/10.1007/978-3-642-41338-4_2},
+	booktitle = {The {Semantic} {Web} – {ISWC} 2013: 12th {International} {Semantic} {Web} {Conference}, {Sydney}, {NSW}, {Australia}, {October} 21-25, 2013, {Proceedings}, {Part} {II}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Bizer, Christian and Eckert, Kai and Meusel, Robert and Mühleisen, Hannes and Schuhmacher, Michael and Völker, Johanna},
+	editor = {Alani, Harith and Kagal, Lalana and Fokoue, Achille and Groth, Paul and Biemann, Chris and Parreira, Josiane Xavier and Aroyo, Lora and Noy, Natasha and Welty, Chris and Janowicz, Krzysztof},
+	year = {2013},
+	pages = {17--32}
+}
+
+@book{herder_state_2013,
+	title = {State of the art and data assessment},
+	url = {http://linkedup-project.eu/files/2013/09/LinkedUp-D1.1-SotA.pdf},
+	author = {Herder, Eelco and Dietze, Stefan and Fetahu, Besnik and D’Aquin, Mathieu and von Rex, Constantin Graf},
+	year = {2013},
+	note = {[accessed 25-March-2016]}
+}
+
+@book{herder_linkedup_2014,
+	title = {{LinkedUp} {Challenge} {Results}},
+	url = {http://linkedup-project.eu/files/2014/11/LinkedUp_D1.3.pdf},
+	author = {Herder, Eelco and Guy, Marieke and Drachsler, Hendrik},
+	year = {2014},
+	note = {[accessed 27-March-2016]}
+}
+
+@book{drachsler_final_2014,
+	title = {Final {Version} of the {LinkedUp} {Evaluation} {Framework}},
+	url = {http://linkedup-project.eu/files/2014/11/LinkedUp_D2.2.2.pdf},
+	author = {Drachsler, Hendrik and Stoyanov, Slavi and Guy, Marieke and Scheffel, Maren},
+	year = {2014},
+	note = {[accessed 28-March-2016]}
 }
