--- a/literature.bib
+++ b/literature.bib
@@ -10,14 +10,16 @@
 	title = {Resource {List} {Management} {Tool} for {Undergraduate} {Students} based on {Linked} {Open} {Data} {Principles}.},
 	booktitle = {The {Semantic} {Web}: {Research} and {Applications}},
 	author = {Clarke, Chris and Greig, Fiona},
-	year = {2009}
+	year = {2009},
+	keywords = {appendix}
 }
 
 @inproceedings{zablith_consuming_2011,
 	address = {Bonn, Germany},
 	title = {Consuming {Linked} {Data} within a {Large} {Educational} {Organization}},
 	author = {Zablith, Fouad and d’Aquin, Mathieu and Brown, Stuart and Green-Hughes, Liam},
-	year = {2011}
+	year = {2011},
+	keywords = {refsw}
 }
 
 @book{heath_linked_2011,
@@ -25,7 +27,8 @@
 	volume = {Synthesis Lectures on the Semantic Web: Theory and Technology},
 	publisher = {Morgan \& Claypool},
 	author = {Heath, Tom and Bizer, Christian},
-	year = {2011}
+	year = {2011},
+	keywords = {refsw}
 }
 
 @article{runeson_guidelines_2008,
@@ -34,19 +37,22 @@
 	number = {14},
 	author = {Runeson, Per and Höst, Martin},
 	year = {2008},
+	keywords = {refsw},
 	pages = {131--164}
 }
 
 @article{gamerith_linked_2016,
 	title = {Linked {Open} {Data} in {Administration} at the {Vienna} {University} of {Technology}},
 	author = {Gamerith, Stefan},
-	year = {2016}
+	year = {2016},
+	keywords = {nonrefw}
 }
 
 @article{baronyai_publishing_2016,
 	title = {Publishing {TUWien} {Data} as {Linked} {Open} {Data}},
 	author = {Baronyai, Lukas},
-	year = {2016}
+	year = {2016},
+	keywords = {nonrefw}
 }
 
 @article{janssen_benefits_2012,
@@ -56,6 +62,7 @@
 	journal = {Information Systems Management},
 	author = {Janssen, Marijn and Charalabidis, Yannis and Zuiderwijk, Anneke},
 	year = {2012},
+	keywords = {refsw},
 	pages = {258--268}
 }
 
@@ -70,7 +77,7 @@
 	note = {http://www.w3.org/TR/2004/REC-webarch-20041215/}
 }
 
-@book{daquin_members_2014,
+@misc{daquin_members_2014,
 	title = {Members of {Linked} {Universities}},
 	url = {http://linkeduniversities.org/lu/index.php/members/index.html},
 	author = {d'Aquin, Mathieu and Kessler, Carsten and Kauppinen, Tomi},
@@ -87,7 +94,7 @@
 	year = {2006}
 }
 
-@book{daquin_linked_2014,
+@misc{daquin_linked_2014,
 	title = {Linked {Universities}},
 	url = {http://linkeduniversities.org/index.html},
 	author = {d'Aquin, Mathieu and Kessler, Carsten and Kauppinen, Tomi},
@@ -109,7 +116,8 @@
 	url = {http://www.euclid-project.eu/},
 	publisher = {The Open University},
 	author = {Simperl, E. and Norton, B. and Maleshkova, M. and Domingue, J. and Mikroyannidis, A. and Mulholland, P. and Power, R.},
-	year = {2013}
+	year = {2013},
+	keywords = {refsw}
 }
 
 @misc{_open_????,
@@ -121,7 +129,8 @@
 
 @article{lukichev_empowering_????,
 	title = {Empowering {Moodle} with {Rules} and {Semantics}},
-	author = {Lukichev, Sergey and Diaconescu, Mircea and Giurca, Adrian}
+	author = {Lukichev, Sergey and Diaconescu, Mircea and Giurca, Adrian},
+	keywords = {refsw}
 }
 
 @inproceedings{bojars_using_2006,
@@ -130,13 +139,15 @@
 	publisher = {Springer},
 	author = {Bojärs, Uldis and Breslin, John G. and Möller, Knud},
 	year = {2006},
+	keywords = {refsw},
 	pages = {679--696}
 }
 
 @inproceedings{holtham_moodle_2012,
 	title = {Moodle 2020: {A} {Position} {Paper}},
 	author = {Holtham, Clive and Rich, Martin and Norris, Leona},
-	year = {2012}
+	year = {2012},
+	keywords = {nonrefw}
 }
 
 @misc{hyland_linked_????,
@@ -164,6 +175,7 @@
 	author = {Krötzsch, Markus and Vrandečić, Denny and Völkel, Max},
 	editor = {Cruz, Isabel and Decker, Stefan and Allemang, Dean and Preist, Chris and Schwabe, Daniel and Mika, Peter and Uschold, Mike and Aroyo, Lora M.},
 	year = {2006},
+	keywords = {refsw},
 	pages = {935--942}
 }
 
@@ -177,10 +189,11 @@
 	author = {Bizer, Christian and Eckert, Kai and Meusel, Robert and Mühleisen, Hannes and Schuhmacher, Michael and Völker, Johanna},
 	editor = {Alani, Harith and Kagal, Lalana and Fokoue, Achille and Groth, Paul and Biemann, Chris and Parreira, Josiane Xavier and Aroyo, Lora and Noy, Natasha and Welty, Chris and Janowicz, Krzysztof},
 	year = {2013},
+	keywords = {refsw},
 	pages = {17--32}
 }
 
-@book{herder_state_2013,
+@misc{herder_state_2013,
 	title = {State of the art and data assessment},
 	url = {http://linkedup-project.eu/files/2013/09/LinkedUp-D1.1-SotA.pdf},
 	author = {Herder, Eelco and Dietze, Stefan and Fetahu, Besnik and D’Aquin, Mathieu and von Rex, Constantin Graf},
@@ -188,7 +201,7 @@
 	note = {[accessed 25-March-2016]}
 }
 
-@book{herder_linkedup_2014,
+@misc{herder_linkedup_2014,
 	title = {{LinkedUp} {Challenge} {Results}},
 	url = {http://linkedup-project.eu/files/2014/11/LinkedUp_D1.3.pdf},
 	author = {Herder, Eelco and Guy, Marieke and Drachsler, Hendrik},
