--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -8,7 +8,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{custompaperandpencil}
-\usepackage[backend=bibtex]{biblatex}
+\usepackage[backend=bibtex, style=ieee]{biblatex}
 
 \setlength{\parindent}{14.0pt} 
 
