'Proposal technical architecture' finished.

--- a/literature.bib
+++ b/literature.bib
@@ -216,3 +216,23 @@
 	year = {2014},
 	note = {[accessed 28-March-2016]}
 }
+
+@misc{daquin_lucero_2010-1,
+	title = {The {LUCERO} {Project}: {Tabloid}},
+	url = {http://lucero-project.info/lb/tabloid/index.html},
+	journal = {Lucero project / Tabloid},
+	author = {d'Aquin, Mathieu and Zablith, Fouad and Motta, Enrico and Stephens, Owen and Brown, Stuart and Elahi, Salman and Nurse, Richard},
+	year = {2010},
+	note = {[accessed 07-March-2016]}
+}
+
+@article{berners-lee_fractal_2008,
+	title = {The fractal nature of the semantic web},
+	volume = {29},
+	number = {3},
+	journal = {AI magazine},
+	author = {Berners-Lee, Tim and Kagal, Lalana},
+	year = {2008},
+	keywords = {refsw},
+	pages = {29}
+}
